HBASE-20569 NPE in RecoverStandbyProcedure.execute